fixed whitespace and delete post

--- a/react-app/src/components/css/profile.css
+++ b/react-app/src/components/css/profile.css
@@ -1,7 +1,8 @@
-.profile.container {
+div.profile.container {
     width: 935px;
-    padding: 30px 20px 0px 20px;
-    margin-top: 60px;
+    padding: 0px 20px 0px 20px;
+    position: absolute;
+    top: 100px;
 }
 
 .profile.top {
@@ -28,4 +29,3 @@ img.profile-post {
     justify-content: flex-start;
     align-items: center;
 }
-
